exports[`Parser > input 'a(b)c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "capturing-group",
    "child": [
      {
        "type": "word",
        "character": "b"
      }
    ]
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'ab+c' 1`] = `
[
  {
    "type": "word",
    "character": "a"
  },
  {
    "type": "repeatable",
    "repeat": "one-or-more",
    "child": {
      "type": "word",
      "character": "b"
    }
  },
  {
    "type": "word",
    "character": "c"
  }
]
`;

exports[`Parser > input 'a|b' 1`] = `
[
  {
    "type": "union",
    "left": {
      "type": "word",
      "character": "a"
    },
    "right": {
      "type": "word",
      "character": "b"
    }
  }
]
`;
